Add grid search cross-validation

--- a/NCAA-2019.ipynb
+++ b/NCAA-2019.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,8 @@
     "import numpy as np\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import GridSearchCV"
    ]
   },
   {
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,26 +281,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test set score: 0.74\n"
+      "Test set score: 0.73\n"
      ]
     }
    ],
    "source": [
     "raw_moneylines = from_csv('./data/spreads.csv')\n",
     "\n",
+    "hyperparameters = {\n",
+    "    'solver': ['lbfgs'],\n",
+    "    'max_iter': [100, 500, 1000, 5000, 10000, 50000, 100000],\n",
+    "    'penalty': ['l2'],\n",
+    "    'C': np.logspace(0, 4, 10),\n",
+    "}\n",
+    "\n",
     "spreads = raw_moneylines[:, 0].reshape(-1, 1)\n",
     "winloss = np.asarray(raw_moneylines[:, 1], dtype='int')\n",
     "\n",
     "moneylines_X_train, moneylines_X_test, moneylines_y_train, moneylines_y_test = train_test_split(spreads, winloss)\n",
     "\n",
-    "spread_classifier = LogisticRegression(solver = 'lbfgs', penalty='l2', max_iter=10000)\n",
+    "spread_classifier = GridSearchCV(LogisticRegression(), hyperparameters, cv=5, verbose=0, error_score='raise')\n",
     "spread_classifier.fit(moneylines_X_train, moneylines_y_train)\n",
     "\n",
     "y_pred = spread_classifier.predict(moneylines_X_test)\n",
@@ -316,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -391,14 +399,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test set score: 0.75\n"
+      "Test set score: 0.74\n"
      ]
     }
    ],
@@ -422,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +442,14 @@
     }
    ],
    "source": [
-    "kenpom_classifier = LogisticRegression(solver = 'lbfgs', penalty='l2', max_iter=10000)\n",
+    "hyperparameters = {\n",
+    "    'solver': ['lbfgs'],\n",
+    "    'max_iter': [1000, 5000],\n",
+    "    'penalty': ['l2'],\n",
+    "    'C': np.logspace(0, 4, 5),\n",
+    "}\n",
+    "\n",
+    "kenpom_classifier = GridSearchCV(LogisticRegression(), hyperparameters, cv=5, verbose=0, error_score='raise')\n",
     "kenpom_classifier.fit(X_train, y_train)\n",
     "\n",
     "y_pred = kenpom_classifier.predict(X_test)\n",
@@ -454,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,18 +591,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The probability that North Carolina beats Michigan St is 0.48\n"
+      "The probability that Gonzaga beats Michigan is 0.57\n"
      ]
     }
    ],
    "source": [
+    "NEUTRAL_LOCATION = 0.5\n",
     "def bracket_helper(team1, team2, actual_spread=None):\n",
     "    team1_stats = kenpom_team_stats_by_year[2019][team1]\n",
     "    team2_stats = kenpom_team_stats_by_year[2019][team2]\n",
@@ -603,7 +619,7 @@
     "    \n",
     "    print(\"The probability that {} beats {} is {:.2f}\".format(team1, team2, win_probability))\n",
     "    \n",
-    "bracket_helper(\"North Carolina\", \"Michigan St\")\n"
+    "bracket_helper(\"Gonzaga\", \"Michigan\")\n"
    ]
   },
   {
@@ -615,27 +631,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['Virginia', 'Gonzaga', 'Duke', 'Michigan St', 'North Carolina', 'Michigan', 'Tennessee', 'Kentucky', 'Texas Tech', 'Purdue', 'Virginia Tech', 'Wisconsin', 'Houston', 'Auburn', 'Florida St', 'Kansas', 'LSU', 'Louisville', 'Iowa St', 'Mississippi St', 'Wofford', 'Buffalo', 'Kansas St', 'Maryland', 'Nevada', 'Villanova', 'Marquette', 'Florida', 'Texas', 'Clemson', \"St Mary's CA\", 'NC State', 'VA Commonwealth', 'Iowa', 'Syracuse', 'Cincinnati', 'UCF', 'Oklahoma', 'Utah St', 'Nebraska', 'Penn St', 'Indiana', 'Baylor', 'Mississippi', 'Ohio St', 'Minnesota', 'Washington', 'TCU', 'Oregon', 'Creighton', 'Murray St', 'Lipscomb', 'Belmont', 'Furman', 'Seton Hall', 'New Mexico St', 'Arkansas', 'Dayton', 'Toledo', 'Alabama', 'Arizona St', 'Liberty', 'Fresno St', 'Colorado', 'Xavier', 'San Francisco', 'Temple', 'Providence', 'ETSU', 'Davidson', 'Butler', 'South Carolina', 'Missouri', 'Miami FL', 'Northwestern', 'Memphis', 'Rutgers', 'Northeastern', \"St John's\", 'UNC Greensboro', 'UC Irvine', 'Illinois', 'Vermont', 'Yale', 'San Diego', 'Oregon St', 'BYU', 'USC', 'Notre Dame', 'Oklahoma St', 'Hofstra', 'Texas A&M', 'Utah Valley', 'Georgetown', 'West Virginia', 'Grand Canyon', 'Southern Miss', 'Connecticut', 'Pittsburgh', 'S Dakota St', 'Wichita St', 'Arizona', 'N Kentucky', 'Ga Southern', 'DePaul', 'Bowling Green', 'Akron', 'Georgia Tech', 'UCLA', 'Utah', 'Jacksonville St', 'Boston College', 'Old Dominion', 'SMU', 'South Florida', 'Stanford', 'Col Charleston', 'WKU', 'Penn', 'Texas St', 'Georgia St', 'C Michigan', 'Radford', 'Wright St', 'Harvard', 'Colgate', 'Drake', 'Tulsa', 'Loyola-Chicago', 'Georgia', 'Ball St', 'San Diego St', 'St Bonaventure', 'N Illinois', 'Austin Peay', 'St Louis', 'ULM', 'Loy Marymount', 'Boise St', 'Louisiana Tech', 'Rhode Island', 'Kent', 'Montana', 'Samford', 'Brown', 'Bucknell', 'UAB', 'Miami OH', 'Abilene Chr', 'UT San Antonio', 'S Illinois', 'Pepperdine', 'UT Arlington', 'George Mason', 'Vanderbilt', 'E Michigan', 'North Texas', 'Charleston So', 'FL Atlantic', 'Marshall', 'Coastal Car', 'Wake Forest', 'UNLV', 'Santa Barbara', 'Bradley', 'NE Omaha', 'Sam Houston St', 'UTRGV', 'Gardner Webb', 'Stony Brook', 'Lehigh', 'Duquesne', 'Missouri St', 'North Florida', 'Northern Iowa', 'Winthrop', 'Louisiana', 'Princeton', 'Colorado St', 'NJIT', 'Seattle', 'Ohio', \"St Joseph's PA\", 'New Mexico', 'Santa Clara', 'Campbell', 'Presbyterian', 'Oakland', 'Hartford', 'Purdue Fort Wayne', 'N Colorado', 'Cal Baptist', 'Hampton', 'IUPUI', 'Mercer', 'CS Fullerton', 'Hawaii', 'Iona', 'American Univ', 'IL Chicago', 'Richmond', 'Florida Intl', 'N Dakota St', 'Illinois St', 'WI Green Bay', 'Appalachian St', 'Weber St', 'Indiana St', 'F Dickinson', 'South Alabama', 'Washington St', 'Rider', 'Columbia', 'Pacific', 'TX Southern', 'William & Mary', 'Cornell', 'Dartmouth', 'Lamar', 'FL Gulf Coast', 'Prairie View', 'Ark Little Rock', 'Valparaiso', 'Long Beach St', 'CS Bakersfield', 'La Salle', 'Evansville', 'UMBC', 'High Point', 'South Dakota', 'Boston Univ', 'Quinnipiac', 'Massachusetts', 'SE Louisiana', 'Missouri KC', 'Detroit', 'E Kentucky', 'Sacred Heart', 'Holy Cross', 'Air Force', 'Army', 'California', 'MTSU', 'E Washington', 'Drexel', 'Rice', 'UC Davis', 'Troy', 'Jacksonville', 'Citadel', 'Arkansas St', 'New Orleans', 'W Michigan', 'Montana St', 'Morehead St', 'MA Lowell', 'Fordham', 'Chattanooga', 'CS Northridge', 'Delaware', 'St Francis PA', 'Norfolk St', 'Long Island', 'Youngstown St', 'Siena', 'Loyola MD', 'Robert Morris', 'North Dakota', 'UNC Wilmington', 'East Carolina', 'Grambling', 'W Carolina', 'Southern Utah', 'St Francis NY', 'Marist', 'CS Sacramento', 'Houston Bap', 'James Madison', 'Albany NY', 'Navy', 'Canisius', 'TAM C. Christi', 'Cleveland St', 'VMI', 'Longwood', 'North Alabama', 'Portland St', 'Towson', 'G Washington', 'TN Martin', 'Oral Roberts', 'Monmouth NJ', 'Tulane', 'W Illinois', 'Charlotte', 'Tennessee St', 'Lafayette', 'UTEP', 'Cent Arkansas', 'WI Milwaukee', 'NC A&T', 'Fairfield', 'Northern Arizona', 'Elon', 'Bethune-Cookman', 'E Illinois', 'Howard', 'NC Central', 'SE Missouri St', 'Nicholls St', 'SF Austin', 'Denver', 'Wagner', 'Niagara', \"St Peter's\", 'Wyoming', 'Ark Pine Bluff', 'Florida A&M', 'Central Conn', 'Jackson St', 'UC Riverside', 'Manhattan', \"Mt St Mary's\", 'Tennessee Tech', 'Bryant', 'Portland', 'Stetson', 'Alabama St', 'Idaho St', 'Edwardsville', 'McNeese St', 'Binghamton', 'Cal Poly SLO', 'Morgan St', 'Southern Univ', 'SC Upstate', 'Maine', 'S Carolina St', 'Kennesaw', 'Northwestern LA', 'Savannah St', 'Coppin St', 'San Jose St', 'Alabama A&M', 'Incarnate Word', 'New Hampshire', 'Idaho', 'UNC Asheville', 'Alcorn St', 'MS Valley St', 'Chicago St', 'Delaware St', 'MD E Shore'])\n"
+      "dict_keys(['Virginia', 'Gonzaga', 'Duke', 'Michigan St', 'Michigan', 'North Carolina', 'Kentucky', 'Tennessee', 'Texas Tech', 'Purdue', 'Virginia Tech', 'Wisconsin', 'Auburn', 'Florida St', 'Houston', 'Iowa St', 'LSU', 'Louisville', 'Wofford', 'Mississippi St', 'Kansas', 'Buffalo', 'Kansas St', 'Maryland', 'Nevada', 'Villanova', 'Florida', 'Marquette', 'Texas', \"St Mary's CA\", 'Clemson', 'Cincinnati', 'Utah St', 'NC State', 'Syracuse', 'Iowa', 'VA Commonwealth', 'Oklahoma', 'Nebraska', 'Penn St', 'Baylor', 'Mississippi', 'Oregon', 'Indiana', 'Ohio St', 'UCF', 'Minnesota', 'TCU', 'Lipscomb', 'Belmont', 'New Mexico St', 'Murray St', 'Washington', 'Creighton', 'Arkansas', 'Seton Hall', 'Furman', 'Toledo', 'Alabama', 'Dayton', 'Memphis', 'Arizona St', 'Liberty', 'Colorado', 'Xavier', 'San Francisco', 'ETSU', 'Missouri', 'Butler', 'South Carolina', 'Fresno St', 'Miami FL', 'Northwestern', 'UC Irvine', 'Rutgers', 'Providence', 'Temple', 'UNC Greensboro', 'Northeastern', 'Vermont', \"St John's\", 'Yale', 'Illinois', 'Oregon St', 'Davidson', 'BYU', 'Hofstra', 'USC', 'Texas A&M', 'Oklahoma St', 'Notre Dame', 'San Diego', 'Wichita St', 'S Dakota St', 'Georgetown', 'West Virginia', 'Pittsburgh', 'Arizona', 'Utah Valley', 'N Kentucky', 'Southern Miss', 'Ga Southern', 'Bowling Green', 'DePaul', 'St Louis', 'Grand Canyon', 'Akron', 'Connecticut', 'UCLA', 'Georgia Tech', 'Georgia St', 'Jacksonville St', 'Old Dominion', 'Utah', 'WKU', 'Boston College', 'SMU', 'Stanford', 'Col Charleston', 'St Bonaventure', 'South Florida', 'San Diego St', 'C Michigan', 'Wright St', 'Harvard', 'Radford', 'Texas St', 'Drake', 'Colgate', 'Georgia', 'Tulsa', 'Loyola-Chicago', 'Penn', 'Ball St', 'Austin Peay', 'N Illinois', 'Montana', 'Loy Marymount', 'Boise St', 'ULM', 'Louisiana Tech', 'Kent', 'Rhode Island', 'Samford', 'Abilene Chr', 'UAB', 'Bucknell', 'Brown', 'Miami OH', 'S Illinois', 'UT San Antonio', 'UT Arlington', 'Pepperdine', 'Vanderbilt', 'E Michigan', 'George Mason', 'North Texas', 'Charleston So', 'FL Atlantic', 'UNLV', 'Marshall', 'Coastal Car', 'NE Omaha', 'Bradley', 'Wake Forest', 'UTRGV', 'Santa Barbara', 'Stony Brook', 'Gardner Webb', 'North Florida', 'Lehigh', 'Missouri St', 'Duquesne', 'NJIT', 'Sam Houston St', 'Princeton', 'Northern Iowa', 'Louisiana', 'Colorado St', 'Winthrop', 'Seattle', 'Ohio', 'New Mexico', \"St Joseph's PA\", 'Santa Clara', 'Presbyterian', 'Oakland', 'Campbell', 'Purdue Fort Wayne', 'Hartford', 'IUPUI', 'N Colorado', 'Mercer', 'Cal Baptist', 'Hampton', 'Hawaii', 'American Univ', 'IL Chicago', 'Iona', 'N Dakota St', 'Florida Intl', 'Richmond', 'CS Fullerton', 'Illinois St', 'WI Green Bay', 'Appalachian St', 'F Dickinson', 'Indiana St', 'Washington St', 'South Alabama', 'FL Gulf Coast', 'Rider', 'Pacific', 'Columbia', 'TX Southern', 'Lamar', 'William & Mary', 'Prairie View', 'Dartmouth', 'Valparaiso', 'Ark Little Rock', 'Long Beach St', 'Cornell', 'Weber St', 'CS Bakersfield', 'La Salle', 'Evansville', 'High Point', 'South Dakota', 'UMBC', 'SE Louisiana', 'Boston Univ', 'Missouri KC', 'Quinnipiac', 'Massachusetts', 'Detroit', 'E Kentucky', 'Sacred Heart', 'E Washington', 'Holy Cross', 'Army', 'Air Force', 'MTSU', 'California', 'Drexel', 'Troy', 'UC Davis', 'Jacksonville', 'Rice', 'Morehead St', 'Citadel', 'W Michigan', 'Montana St', 'CS Northridge', 'Arkansas St', 'New Orleans', 'St Francis PA', 'Chattanooga', 'MA Lowell', 'Fordham', 'Long Island', 'Delaware', 'Youngstown St', 'Robert Morris', 'Norfolk St', 'Siena', 'North Dakota', 'Loyola MD', 'UNC Wilmington', 'East Carolina', 'W Carolina', 'St Francis NY', 'Grambling', 'Marist', 'CS Sacramento', 'Houston Bap', 'James Madison', 'Albany NY', 'Canisius', 'Navy', 'Southern Utah', 'TAM C. Christi', 'Cleveland St', 'VMI', 'North Alabama', 'Longwood', 'Portland St', 'Towson', 'TN Martin', 'Oral Roberts', 'G Washington', 'Tulane', 'W Illinois', 'Tennessee St', 'Monmouth NJ', 'Charlotte', 'Cent Arkansas', 'UTEP', 'WI Milwaukee', 'Lafayette', 'Fairfield', 'NC A&T', 'NC Central', 'Northern Arizona', 'Elon', 'E Illinois', 'Bethune-Cookman', 'SE Missouri St', 'Howard', 'Nicholls St', 'SF Austin', 'Denver', 'Wagner', 'Niagara', \"St Peter's\", 'Wyoming', 'Ark Pine Bluff', 'Florida A&M', 'Central Conn', 'UC Riverside', 'Jackson St', 'Tennessee Tech', \"Mt St Mary's\", 'Manhattan', 'Bryant', 'Stetson', 'Portland', 'Idaho St', 'Edwardsville', 'Alabama St', 'McNeese St', 'Binghamton', 'Cal Poly SLO', 'Morgan St', 'Southern Univ', 'SC Upstate', 'Maine', 'S Carolina St', 'Kennesaw', 'Savannah St', 'Northwestern LA', 'Coppin St', 'San Jose St', 'Alabama A&M', 'Incarnate Word', 'New Hampshire', 'Idaho', 'UNC Asheville', 'Alcorn St', 'MS Valley St', 'Chicago St', 'Delaware St', 'MD E Shore'])\n"
      ]
     }
    ],
    "source": [
     "print(kenpom_team_stats_by_year[2019].keys())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
